<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ExpenseDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_dp"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp">

        <TextView
            android:id="@+id/txt_expense_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_font"
            android:textStyle="bold"
            tools:text="Title Text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/str_expense_date"
            android:textSize="@dimen/small_font" />

        <TextView
            android:id="@+id/txt_expense_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            tools:text="Title Text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/str_total_amount"
            android:textSize="@dimen/small_font" />

        <TextView
            android:id="@+id/txt_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            tools:text="Title Text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/str_description"
            android:textSize="@dimen/small_font" />

        <TextView
            android:id="@+id/txt_expense_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            tools:text="Title Text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/str_paid_by"
            android:textSize="@dimen/small_font" />

        <TextView
            android:id="@+id/txt_expense_paid_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            tools:text="Title Text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/split_equally_with"
            android:textSize="@dimen/small_font" />

        <TextView
            android:id="@+id/txt_expense_split_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            tools:text="Title Text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text=""
            android:id="@+id/label_amount_owe"
            android:textSize="@dimen/small_font" />

        <TextView
            android:id="@+id/txt_expense_owe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            tools:text="Title Text" />

    </LinearLayout>
</ScrollView>