<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/twenty_dp">

    <TextView
        android:id="@+id/label_paid_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_paid_by"
        android:textSize="@dimen/small_font"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_paid_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_paid_by" />

    <TextView
        android:id="@+id/label_shared_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_shared_by"
        android:textSize="@dimen/small_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_shared_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_equally_shared"
        android:textSize="@dimen/medium_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_shared_by" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_expense_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forty_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_paid_by">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expense_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_expense_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expense_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_expense_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_expense_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_expense_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expense_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/str_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@color/design_default_color_primary_dark"
        android:padding="@dimen/twenty_dp"
        android:text="@string/str_save_expense"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_expense_description" />
</androidx.constraintlayout.widget.ConstraintLayout>